# gallery

./: .gitignore  Cargo.toml  diesel.toml  gallery.template.toml  gallery.toml
gallery/: Cargo.toml
gallery/src/: common.rs  config.rs  error.rs  main.rs  routes.rs  utils.rs
gallery/src/handlers/: album.rs  album_thumbnail.rs  job.rs  mod.rs  photo.rs  photo_thumbnail.rs
gallery/src/indexer/: actor.rs  indexer_actor.rs  mod.rs  walker_actor.rs
gallery/src/models/: album.rs  album_thumbnail.rs  db.rs  helper.rs  job.rs  mod.rs  photo.rs  photo_thumbnail.rs  schema.rs
gallery/static/: admin.css  gallery.css  main.css
gallery/templates/: album.html  base.html  photo.html
gallery/templates/admin/: admin_base.html  jobs.html
gallery_derive/: Cargo.toml
gallery_derive/src/: lib.rs
migrations/2019-02-10-143443_create_albums/: up.sql
migrations/2019-02-12-125922_create_photos/: up.sql
migrations/2019-02-19-145444_create_jobs/: up.sql
src/: common.rs  config.rs  error.rs  gallery.rs  gallery_routes.rs  main.rs  models.rs  routes.rs  utils.rs
src/indexer/: actor.rs  messages.rs  mod.rs
src/models/: album.rs  album_thumbnail.rs  db.rs  helper.rs  mod.rs  photo.rs  photo_thumbnail.rs  schema.rs
static/: album.css  main.css  photo.css
static/fonts/: Amiko-Regular-webfont.eot  stylesheet.css
templates/: album.html  base.html  photo.html
